@@ -34,6 +34,8 @@
 *.lastbuildstate
 *.opensdf
 *.vcxproj.user
+*.patch
+transfer*
 build
 callgrind.*
 cmdline.*
