@@ -1,26 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project version="18.1">
-    <meta>
-        <filters directoryPatterns="" filePatterns="" positiveFilePatterns="" showHiddenFiles="false"/>
-        <options>
-            <serialized version="18.1" xml:space="preserve">
-                <serializableOrderedMap>
-                    <entry>
-                        <String>enable.project.master.files.support</String>
-                        <Boolean>true</Boolean>
-                    </entry>
-                </serializableOrderedMap>
-            </serialized>
-        </options>
-    </meta>
-    <projectTree name="dvisvgm.xpr">
-        <file name="conf-dblatex-man.xsl"/>
-        <file name="conf-dblatex-pdf.xsl"/>
-        <file name="db2html.xsl"/>
-        <file name="dvisvgm.css"/>
-        <file name="dvisvgm.sty"/>
-        <file name="dvisvgm.xml"/>
-        <file name="tweak-db-article.xsl"/>
-        <file name="tweak-dblatex-pdf.xsl"/>
-    </projectTree>
-</project>
