@@ -38,7 +38,7 @@ PROJECT_NAME           = dvisvgm
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER = 3.0.1
+PROJECT_NUMBER = 3.0.2
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
